--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "css-loader": "^0.28.7",
     "element-ui": "^1.4.4",
+    "es6-promise": "^4.1.1",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "lodash": "^4.17.4",
